plugins {
    id 'java'
}

group 'com.fangle'
version '1.0.0'

sourceCompatibility = 1.8

repositories {
    maven {
        url 'http://maven.aliyun.com/nexus/content/groups/public/'
    }
    mavenCentral()
}

//jar {
//    manifest {
//        attributes(
//            "Implementation-Title": "Gradle"
//        )
//    }
//    into('lib') {
//        from configurations.runtime
//    }
//
//}

dependencies {


    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime
    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.6'


    testCompile group: 'junit', name: 'junit', version: '4.12'
}
